profilelist1exp/unpackaged/objects/SF1_Adoption__c.object
<CustomObject>
    <fields>
        <fullName>Dashboard_ID__c</fullName>
        <label>Dashboard ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dashboard_Name__c</fullName>
        <label>Dashboard Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Refreshed_Date__c</fullName>
        <description>CR 13635</description>
        <label>Last Refreshed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <description>to indicate whether the source is trigger from SF1, Lightning or classic view</description>
        <label>Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <label>Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Action__c</fullName>
        <label>User Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Edited_Date__c</fullName>
        <label>User Edited Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SF1_Adoptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SF1 Adoption</label>
    <nameField>
        <displayFormat>SF1- {0000}</displayFormat>
        <label>SF1 Adoption Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SF1 Adoptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>